# labelstudioapiwrapper

./: .gitignore  README.md  pyproject.toml
scripts/: azure_storage_connection_configuration.env  azure_storage_connection_local_configuration.env  create_source_azure_storage_connection.sh
src/: label_studio_api.py  label_studio_api_wrapper.py  label_studio_instance.py
storage_connections_management/: azure_storage_connection_configuration.env  create_target_azure_storage_connection.sh  credentials.env  credentials_local.env
test/: test_create_storage_connections.py
test/helpers/: azure_storage_configuration.yaml  azure_storage_configuration_mock.yaml
